<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/inbox"
            android:id="@+id/inbox_id"
            android:icon="@drawable/inbox"/>

        <item android:title="@string/starred"
            android:icon="@drawable/starred"
            android:id="@+id/starred_id"/>

        <item android:id="@+id/send_id"
            android:title="@string/send_mail"
            android:icon="@drawable/sent"/>

        <item android:id="@+id/drafts_id"
            android:title="@string/drafts"
            android:icon="@drawable/drafts"/>

    </group>

    <item android:title="@string/subheader">

        <menu>
            <item android:title="@string/all_main"
                android:id="@+id/allmail_id"
                android:icon="@drawable/allmail"/>

            <item android:title="@string/trash"
                android:id="@+id/trash_id"
                android:icon="@drawable/trash"/>

            <item android:title="@string/spam"
                android:id="@+id/spam_id"
                android:icon="@drawable/spam"/>
        </menu>

    </item>

</menu>